Nm resize fix: - Fix dataview grid resize not taking care of category color border - Fix Category borders make headers misaligned

--- a/templates/default/app.css
+++ b/templates/default/app.css
@@ -105,3 +105,5 @@ table.egwLinkMoreOptions {
 .et2_gantt .gantt_cell .gantt_column_pe_resources:hover li {
 	display: block;
 }
+
+#projectmanager-list_nm.et2_nextmatch .egwGridView_outer thead tr {border-left: 12px solid transparent;}
