--- a/templates/pixelegg/app.css
+++ b/templates/pixelegg/app.css
@@ -14,7 +14,7 @@
  */
 /* $Id$ */
 /**
- * Let button in link_add look like regular [+] / add button
+ * Let button in link_add look like regular [+] / add button, with app behind
  */
 button#projectmanager-elements-list_link_add_add {
   width: 24px;
@@ -22,6 +22,7 @@ button#projectmanager-elements-list_link_add_add {
   overflow: hidden;
   padding: 0;
   background-position: 3px;
+  float: left;
 }
 button#projectmanager-elements-list_link_add_add:hover {
   background-size: 16px 16px;
@@ -114,6 +115,9 @@ table.egwLinkMoreOptions {
 }
 .et2_gantt .gantt_cell .gantt_column_pe_resources:hover li {
   display: block;
+}
+#projectmanager-list_nm.et2_nextmatch .egwGridView_outer thead tr {
+  border-left: 12px solid transparent;
 }
 /*default */
 .planned {
